--- a/index.ipynb
+++ b/index.ipynb
@@ -206,21 +206,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for travel_destination in travel_destinations:\n",
-    "        print travel_destination.title()\n",
+    "        print (travel_destination.title())\n",
     "    return travel_destinations\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
