--- a/index.ipynb
+++ b/index.ipynb
@@ -220,28 +220,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Argentina\n",
-      "Mexico\n",
-      "Italy\n",
-      "Finland\n",
-      "Canada\n",
-      "Croatia\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
+       "'Argentina'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
