--- a/index.ipynb
+++ b/index.ipynb
@@ -212,9 +212,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    for travel_destination in travel_destinations:\n",
-    "        return travel_destination.title()\n",
-    "    return travel_destinations\n",
+    "    for i in list()\n",
     "        "
    ]
   },
