--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    for i in list(range(0,))\n",
+    "    for i in list(range(0,number_of_))\n",
     "        "
    ]
   },
