--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for i in list(range(0,number_of_destinations()))\n",
-    "    trav\n",
+    "    travel_destinations\n",
     "        "
    ]
   },
