--- a/index.ipynb
+++ b/index.ipynb
@@ -206,23 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-19-a6cbe62e5017>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-19-a6cbe62e5017>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    for i in list(range(0,number_of_destinations()))\u001b[0m\n\u001b[0m                                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    for i in list(range(0,number_of_destinations()))\n",
-    "    travel_destinations[1].title()\n",
+    "    for i in list(range(0,number_of_destinations())):\n",
+    "        travel_destinations[1].title()\n",
     "        "
    ]
   },
