Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
     "    for i in list(range(0,number_of_destinations())):\n",
     "        travel_destinations[1].title()\n",
     "        \n",
-    "        \n",
+    "    return travel_destinations\n",
     "        "
    ]
   },
