Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -212,8 +212,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    for i in list(range(0,number_of_destinations())):\n",
-    "        travel_destinations[1].title()\n",
+    "    for travel_\n",
     "        \n",
     "    return travel_destinations\n",
     "        "
