--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    for travel_\n",
+    "    for travel_destination in travel_destinations:\n",
+    "        \n",
     "        \n",
     "    return travel_destinations\n",
     "        "
