Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -213,7 +213,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for travel_destination in travel_destinations:\n",
-    "        \n",
+    "        travel_destination = travel_destination.\n",
     "        \n",
     "    return travel_destinations\n",
     "        "
