--- a/index.ipynb
+++ b/index.ipynb
@@ -206,14 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for travel_destination in travel_destinations:\n",
-    "        print travel\n",
+    "        print (travel_destination)\n",
     "    return travel_destinations\n",
     "        "
    ]
