Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -259,16 +259,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Argentina\n",
+      "Mexico\n",
+      "Italy\n",
+      "Finland\n",
+      "Canada\n",
+      "Croatia\n",
+      "Argentina\n",
+      "Mexico\n",
+      "Italy\n",
+      "Finland\n",
+      "Canada\n",
+      "Croatia\n",
+      "Japan\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia', 'japan']"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
