--- a/index.ipynb
+++ b/index.ipynb
@@ -213,7 +213,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for travel_destination in travel_destinations:\n",
-    "        print (travel_destination.title())\n",
+    "        travel_destination ==travel_destination.title())\n",
     "    return travel_destinations\n",
     "        "
    ]
