--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,9 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    for travel_destination in travel_destinations:\n",
+    "    for i in list(range(0, l))\n",
+    "    \n",
+    "    travel_destination in travel_destinations:\n",
     "        travel_destination = travel_destination.title()\n",
     "    \n",
     "    return travel_destinations\n",
