--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    for i in list(range(0, number_of_destinations))\n",
+    "    for i in list(range(0, number_of_destinations()))\n",
     "    \n",
     "    travel_destination in travel_destinations:\n",
     "        travel_destination = travel_destination.title()\n",
