--- a/index.ipynb
+++ b/index.ipynb
@@ -213,8 +213,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for i in list(range(0, number_of_destinations()))\n",
-    "        \n",
-    "            travel_destination = travel_destination.title()\n",
+    "        travel_destination[] = travel_destination.title()\n",
     "    \n",
     "    return travel_destinations\n",
     "        "
