Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -248,35 +248,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Argentina\n",
-      "Mexico\n",
-      "Italy\n",
-      "Finland\n",
-      "Canada\n",
-      "Croatia\n",
-      "Argentina\n",
-      "Mexico\n",
-      "Italy\n",
-      "Finland\n",
-      "Canada\n",
-      "Croatia\n",
-      "Japan\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia', 'japan']"
+       "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia', 'Japan']"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
